# Ai-PDF-Chatbot

./: README.md  app.py  chunking.py  embedding.py  main.py  pdf_reader.py  pyproject.toml  query.py  requirements.txt  vector_store.py
